RESOLVED FIXED131573
[EFL] REGRESSION(167145): JavaScript media controls are broken
https://bugs.webkit.org/show_bug.cgi?id=131573
Summary [EFL] REGRESSION(167145): JavaScript media controls are broken
Xabier Rodríguez Calvar
Reported 2014-04-11 16:55:02 PDT
+++ This bug was initially created as a clone of Bug #131569 +++ Looks like we need to pull in the localized string JavaScript file
Attachments
Patch (2.24 KB, patch)
2014-05-05 02:33 PDT, Ryuan Choi
no flags
Xabier Rodríguez Calvar
Comment 1 2014-04-12 00:19:57 PDT
EFL controls were created in r166872, though I am not sure if they are active yet.
Ryuan Choi
Comment 2 2014-05-05 02:33:02 PDT
Brent Fulgham
Comment 3 2014-05-05 09:43:23 PDT
Comment on attachment 230813 [details] Patch r=me.
WebKit Commit Bot
Comment 4 2014-05-05 19:09:07 PDT
Comment on attachment 230813 [details] Patch Clearing flags on attachment: 230813 Committed r168342: <http://trac.webkit.org/changeset/168342>
WebKit Commit Bot
Comment 5 2014-05-05 19:09:14 PDT
All reviewed patches have been landed. Closing bug.
Michal Pakula vel Rutka
Comment 6 2014-05-26 08:12:22 PDT
*** Bug 86597 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.