[EFL] REGRESSION(167145): JavaScript media controls are broken https://bugs.webkit.org/show_bug.cgi?id=131573

Reviewed by Brent Fulgham.

* PlatformEfl.cmake: Add the localized strings file to the list of user agent scripts.
* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::mediaControlsScript): Include the localized strings file in the script body.


Canonical link: https://commits.webkit.org/150620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168342 268f45cc-cd09-0410-ab3c-d52691b4dbfc